--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="search-js" defer="" src="https://api.mapbox.com/search-js/v1.0.0-beta.22/web.js"></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet'/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js"></script>
+    <link
+            rel="stylesheet"
+            href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.css"
+            type="text/css"
+    />
     <title>Mind</title>
 </head>
 <body>
@@ -16,6 +22,20 @@
         top: 0;
         bottom: 0;
         width: 100%;"></div>
+<div class="info-box" style="position: absolute;
+        margin: 20px;
+        width: 25%;
+        top: 0;
+        bottom: 20px;
+        padding: 20px;
+        background-color: #fff;
+        overflow-y: scroll;">
+    <p>
+        Draw your route using the draw tools on the right. To get the most
+        accurate route match, draw points at regular intervals.
+    </p>
+    <div id="directions"></div>
+</div>
 <script type="module" src="/src/main.js"></script>
 </body>
 </html>
